[project]
name = "agent-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "logfire[fastapi]>=4.6.0",
    "opentelemetry-instrumentation-sqlite3>=0.57b0",
    "pydantic-ai>=1.0.4",
    "ruff>=0.13.0",
]
